Bug 298592 - Kwebkitpart does not seem to honor PluginDomains
Summary: Kwebkitpart does not seem to honor PluginDomains
Status: RESOLVED FIXED
Alias: None
Product: kwebkitpart
Classification: Frameworks and Libraries
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: webkit-bugs-null
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-04-22 10:24 UTC by LuRan
Modified: 2012-07-22 20:50 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 1.3.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description LuRan 2012-04-22 10:24:50 UTC
I tried to enable flash plugin for youtube only while disable it for all other website. I tried to set the PluginDomains in konquerors's setting panel. But it seems only khtml recongnizes this variable and behaves accordingly, with kwebkitpart only the global enable/disable switch have effects on the plugins.

Reproducible: Always

Steps to Reproduce:
1. Enter youtube.com in the plugin panel of the setting dialog of konqueror, also set webkit to be the default backend.
2. Open some youtube video.
Actual Results:  
Youtube complain about no flash plugins

Expected Results:  
Flash should be enabled for youtube
Comment 1 Dawit Alemayehu 2012-04-22 17:09:27 UTC
kwebkitpart does not use nspluginviewer. It uses QtWebKit's built-in flash player which at the moment is not directly configurable. That is why currently the per domin settings as well as the on-demand loading have no effect. Only the Enable/disable plugin option is honored. This might change in the future by adapting the implementation from the Arora or reKonq web browser.
Comment 2 Dawit Alemayehu 2012-07-22 20:50:35 UTC
Git commit 5b9b22a44609e768a0f64ec2acf163dbcc925bb4 by Dawit Alemayehu.
Committed on 22/07/2012 at 18:01.
Pushed by adawit into branch 'master'.

Honor Konqueror's on demand plugin loading and per host plugin configuration.
FIXED-IN: 1.3.0

M  +2    -0    src/webpage.cpp
M  +117  -5    src/webpluginfactory.cpp
M  +25   -2    src/webpluginfactory.h

http://commits.kde.org/kwebkitpart/5b9b22a44609e768a0f64ec2acf163dbcc925bb4