Honor Konqueror's on demand plugin loading and per host plugin configuration.

BUG: 298592
FIXED-IN: 1.3.0