src/webpluginfactory.h
@@ -21,19 +21,42 @@
 #ifndef WEBPLUGINFACTORY_H
 #define WEBPLUGINFACTORY_H
 
-
+#include <QList>
+#include <QUrl>
+#include <QWidget>
 #include <KDE/KWebPluginFactory>
 
 class KWebKitPart;
+class QPoint;
+
+class FakePluginWidget : public QWidget
+{
+    Q_OBJECT
+    Q_PROPERTY(bool swapping READ swapping)
+
+public:
+    FakePluginWidget(const QUrl& url, const QString& mimeType, QWidget* parent = 0);
+    bool swapping() const { return m_swapping; }
+
+private Q_SLOTS:
+    void loadAll();
+    void load(bool loadAll = false);
+    void showContextMenu(const QPoint&);
+
+private:
+    bool m_swapping;
+    QString m_mimeType;
+};
 
 class WebPluginFactory : public KWebPluginFactory
 {
+
 public:
     WebPluginFactory (KWebKitPart* parent = 0);
     virtual QObject* create (const QString&, const QUrl&, const QStringList&, const QStringList&) const;
-
 private:
     KWebKitPart* mPart;
+    mutable QList<QString> mLoadOnDemandPluginList;
 };
 
 #endif
